{
    "name": "OCSInput",
    "maps": [
        {
            "name": "Backhoe",
            "id": "86d20947-02da-471f-9e8d-276796a5d47d",
            "actions": [
                {
                    "name": "LeftCrawlerJoystickMagnitude",
                    "type": "PassThrough",
                    "id": "c1bb502a-700a-40cb-aae6-b8f7708208a3",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftCrawlerJoystickReverse",
                    "type": "Button",
                    "id": "5a1a6149-ab8b-4394-924c-778ac4d1ca74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightCrawlerJoystickMagnitude",
                    "type": "PassThrough",
                    "id": "013081dc-c6f4-4758-a99d-139eb6e4a06e",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightCrawlerJoystickReverse",
                    "type": "Button",
                    "id": "3453f6fe-f532-4b44-bbf8-036e99b45ba0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JointJoystickLeft",
                    "type": "PassThrough",
                    "id": "72d1edeb-6d69-4971-a669-ef19c3d89e63",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JointJoystickRight",
                    "type": "PassThrough",
                    "id": "7ffdec9d-7819-4af0-9caf-d817db4fa980",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9b076fcc-f70b-4bd1-b362-822b75e357f9",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "LeftCrawlerJoystickMagnitude",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "342df045-23ca-4709-8f3d-68d39915ae41",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftCrawlerJoystickReverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4943a58-e81a-46fb-962e-70caab169667",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "RightCrawlerJoystickMagnitude",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6eea573-ceeb-4cae-bd68-bdd4948decbe",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightCrawlerJoystickReverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ce57c22-7509-4e6b-be57-66e4b3dae55c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JointJoystickLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b789e4f1-cf9d-4eb0-862f-85fecca668d3",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JointJoystickRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}